# postgrest

./: .cirrus.yml  .codecov.yml  .dockerignore  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .stylish-haskell.yaml  .travis.yml  ARCHITECTURE.md  BACKERS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.development  Gruntfile.js  ISSUE_TEMPLATE.md  LICENSE  Main.hs  Makefile  PgQuery.hs  PgStructure.hs  Pipfile  README.md  RangeQuery.hs  Setup.hs  admin.rst  api.rst  app.json  appveyor.yml  auth.rst  best_practices.rst  build.sh  cabal.project  cabal.project.freeze  cabal.project.non-nix  circle.yml  conf.py  configuration.rst  (+28 more)
.circleci/: config.yml
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  actionlint.yml  codecov.yml  dependabot.yml  get_cirrusci_freebsd  release  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backport.yaml  build.yaml  cachix.yaml  check.yaml  ci.yaml  docs.yaml  linkcheck.yaml  loadtest.yaml  openapi.yml  release.yaml  report.yaml  test.yaml
_static/css/: custom.css
changelog/: HEAD.yaml
css/: bootstrap.min.css  dbapi-product.css  dbapi-product.css.map
dbstructure/: Main.hs  README.md  analyze  benchmark  expected.out  query.sql  show
debian/: TODO-deps.md  changelog  control  copyright  haskell-postgrest-utils.install  postgrest-wrapper  postgrest.default  postgrest.init.d  rules  watch
diagrams/: README.md  db.tex  employees.er  orders.er  presidents.er  users.er
docker/: Dockerfile  config.conf  docker-compose.yml  postgrest.conf  start
docker/distro_release/: Dockerfile.centos6  Dockerfile.centos7  Dockerfile.ubuntu  Dockerfile.ubuntui386  build-on-container.sh  build-on-distros.sh  load-or-build-distros.sh  load-or-build-image.sh  setup-container.sh  setup-distros.sh
dockerfiles/: Dockerfile  Dockerfile.build  postgrest-docker-usage  postgrest-env
docs/: .gitignore  CNAME  README.md  admin.rst  api.rst  auth.rst  build.sh  conf.py  configuration.rst  connection_pool.rst  db_authz.rst  default.nix  ecosystem.rst  errors.rst  index.md  index.rst  install.rst  livereload_docs.py  postgrest.dict  requirements.txt  schema_cache.rst  schema_structure.rst  shell.nix  transactions.rst
docs/_diagrams/: README.md  arch-dark.uml  arch.uml  boxoffice.er  db.tex  film.er  orders.er  premieres.er  presidents.er  users.er
docs/admin/: deployment.md  migration.md  performance.md  security.md  versioning.md
docs/api/: reading.md  writing.md
docs/examples/: blog.md  external_auth.md  python-requests-jwt.md  start.md  users.md
docs/explanations/: admin.rst  architecture.rst  db_authz.rst  external_auth.rst  install.rst  nginx.rst  schema_isolation.rst
docs/extensions/: sphinx-copybutton.nix  sphinx-tabs.nix
docs/how-tos/: create-soap-endpoint.rst  debugging-performance-with-pg-stat-statements.rst  embedding-table-from-another-schema.rst  providing-html-content-using-htmx.rst  providing-images-for-img.rst  sql-user-management-using-postgres-users-and-passwords.rst  sql-user-management.rst  working-with-postgresql-data-types.rst  zero-downtime-upgrades.rst
docs/install/: ecosystem.md  server.md
docs/integrations/: greenplum.rst  heroku.rst  jwt_gen.rst  nginx.rst  opentelemetry.rst  pg-safeupdate.rst  postgis.rst  systemd.rst
docs/multi_api_example/: index.md  postgrest_v1  postgrest_v1.conf  postgrest_v2  postgrest_v2.conf
docs/references/: admin.rst  admin_server.rst  api.rst  auth.rst  cli.rst  configuration.rst  connection_pool.rst  errors.rst  health_check.rst  listener.rst  observability.rst  schema_cache.rst  transactions.rst
docs/releases/: latest.rst  unreleased.rst  v09.0.0.rst  v09.0.1.rst  v10.0.0.rst  v10.2.0.rst  v11.0.0.rst  v11.0.1.rst  v11.1.0.rst  v11.2.0.rst  v11.2.1.rst  v6.0.2.rst  v7.0.0.rst  v7.0.1.rst  v8.0.0.rst  v9.0.0.rst  v9.0.1.rst
docs/tutorials/: tut0.rst  (+1 more)
erd/: README.md
how-tos/: casting-type-to-custom-json.rst  embedding-table-from-another-schema.rst  providing-images-for-img.rst
integrations/: timescaledb.rst
js/: main.js  retina.min.js
less/: mixins.less  theme.less
main/: Main.hs  UnixSocket.hs
nix/: Dockerfile  README.md  UPGRADE.md  devtools.nix  docker-compose.yml  docker.nix  libpq.nix  lint.nix  loadtest.nix  memory.nix  nixpkgs-update.nix  nixpkgs-upgrade.nix  nixpkgs-version.nix  release.nix  split-sections-cross.patch  static-haskell-package.nix  static-haskell-packages.nix  static.nix  style.nix  tests.nix  withtmpdb.nix  withtools.nix
nixExternalLibs/: hasql-transaction.nix  swagger2.nix
releases/: upcoming.rst  v5.2.0.rst  v6.0.2.rst  v7.0.0.rst  v7.0.1.rst  v8.0.0.rst  v9.0.0.rst
schema-templates/: basic-auth.sql  blog.sql
scripts/: docker_push.sh  init_docker.sh  install_deps.sh  make_docker_release.sh  release_s3.sh  run_tests.sh
src/: App.hs  Auth.hs  Config.hs  Dbapi.hs  Error.hs  Main.hs  Middleware.hs  PgError.hs  PgQuery.hs  PgStructure.hs  RangeQuery.hs  Types.hs  mock.hs
src/protolude/: .ghci  .gitignore  .hlint.yaml  ChangeLog.md  LICENSE  README.md  all_stack.sh  default.nix  protolude.cabal  stack.yaml  test_stack_lts.sh
src/protolude/.github/workflows/: cabal.yml  haskell-ci.yml  hlint.yml  nix.yml  stack.yml
src/protolude/Protolude/: Bifunctor.hs  Bool.hs  ConvertText.hs  Error.hs  Exceptions.hs  Panic.hs  Show.hs
src/protolude/export_lists/: protolude-11.exports  protolude-12.exports  protolude-14.exports  protolude-7.exports
src/protolude/src/: Protolude.hs
src/protolude/src/Protolude/: Applicative.hs  Base.hs  CallStack.hs  Conv.hs  Debug.hs  Either.hs  Error.hs  Functor.hs  List.hs  Monad.hs  Partial.hs  Safe.hs  Semiring.hs  Unsafe.hs
test/: Dockerfile.test  Main.hs  Memory.hs  PgQuerySpec.hs  QueryCost.hs  README.md  Spec.hs  SpecHelper.hs  TestTypes.hs  coverage.overlay  create_test_db  default.nix  destroy_test_db  docker-compose.yml  io-tests.sh  memory-tests.sh  openapi-drift-check.sh  orioledb.sql  test.crt  test.key  weeder.dhall  weeder.toml  with_tmp_db
tutorials/: tut0.rst  tut1.rst
(+648 files in other folders)
