name:                  dbapi
version:               0.2.2.0
synopsis:              The database is your api
license:               MIT
license-file:          LICENSE
author:                Joe Nelson, Adam Baker
maintainer:            cred+github@begriffs.com
category:              Web
build-type:            Simple
cabal-version:         >=1.10

executable dbapi
  main-is:             Main.hs
  ghc-options:         -Wall -W -Werror
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <5
                     , HDBC, HDBC-postgresql
                     , warp, wai >= 3.0.1 && < 3.0.2
                     , wai-extra, wai-cors
                     , wai-middleware-static >= 0.6.0
                     , HTTP, convertible
                     , case-insensitive
                     , http-types, scientific, time
                     , bytestring, aeson, network >= 2.6
                     , text , containers
                     , optparse-applicative >= 0.9.1 && < 0.10
                     , unordered-containers
                     , regex-base
                     , string-conversions
                     , http-media, regex-tdfa
                     , Ranged-sets
                     , transformers
                     , bcrypt
                     , base64-string
                     , split
                     , network-uri >= 2.6
  Other-Modules:       Dbapi
                     , PgStructure
                     , PgQuery
                     , RangeQuery
                     , Middleware
  hs-source-dirs:      src

Test-Suite spec
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  Hs-Source-Dirs:      test, src
  ghc-options:         -Wall -W -Werror
  Main-Is:             Main.hs
  Other-Modules:       Dbapi, Spec, SpecHelper
  Build-Depends:       base, hspec2
                     , hspec-wai >= 0.5.0, hspec-wai-json
                     , HDBC, HDBC-postgresql
                     , warp, wai >= 3.0.1 && < 3.0.2
                     , HTTP, convertible
                     , case-insensitive
                     , wai-extra, wai-cors, containers
                     , wai-middleware-static >= 0.6.0
                     , http-types, scientific, time
                     , bytestring, aeson, network >= 2.6
                     , text, optparse-applicative
                     , unordered-containers
                     , regex-base
                     , string-conversions
                     , http-media, regex-tdfa
                     , Ranged-sets
                     , transformers
                     , bcrypt
                     , base64-string
                     , split
                     , network-uri >= 2.6
