name:                  dbapi
version:               0.2.4.5
synopsis:              The database is your api
license:               MIT
license-file:          LICENSE
author:                Joe Nelson, Adam Baker
maintainer:            cred+github@begriffs.com
category:              Web
build-type:            Simple
cabal-version:         >=1.10

executable dbapi
  main-is:             Main.hs
  ghc-options:         -Wall -W -Werror -O2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-extensions:    QuasiQuotes
  build-depends:       base >=4.6 && <5
                     , hasql, hasql-backend, hasql-postgres
                     , warp >= 3.0.2, wai >= 3.0.1
                     , wai-extra, wai-cors
                     , wai-middleware-static >= 0.6.0
                     , HTTP, convertible, http-types
                     , case-insensitive
                     , scientific, time
                     , aeson, network >= 2.6
                     , bytestring, text, split, string-conversions
                     , stringsearch
                     , containers, unordered-containers
                     , optparse-applicative >= 0.9.1 && < 0.10
                     , regex-base, regex-tdfa
                     , regex-tdfa-text
                     , Ranged-sets
                     , transformers
                     , bcrypt, base64-string
                     , network-uri >= 2.6
                     , resource-pool, process
                     , blaze-builder
  Other-Modules:       App
                     , Config
                     , PgStructure
                     , PgQuery
                     , RangeQuery
                     , Middleware
  hs-source-dirs:      src

Test-Suite spec
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-extensions:    QuasiQuotes
  Hs-Source-Dirs:      test, src
  ghc-options:         -Wall -W -Werror
  Main-Is:             Main.hs
  Other-Modules:       App, Config, Spec, SpecHelper
  Build-Depends:       base, hspec2, QuickCheck
                     , hspec-wai >= 0.5.0, hspec-wai-json
                     , hasql, hasql-backend, hasql-postgres
                     , warp >= 3.0.2, wai >= 3.0.1
                     , HTTP, convertible
                     , case-insensitive
                     , wai-extra, wai-cors, containers
                     , wai-middleware-static >= 0.6.0
                     , http-types, scientific, time
                     , bytestring, aeson, network >= 2.6
                     , text, optparse-applicative
                     , stringsearch
                     , unordered-containers
                     , regex-base
                     , string-conversions
                     , http-media, regex-tdfa
                     , regex-tdfa-text
                     , Ranged-sets
                     , transformers
                     , bcrypt
                     , base64-string
                     , split
                     , network-uri >= 2.6
                     , resource-pool
                     , blaze-builder
