name:               postgrest
version:            7.0.1
synopsis:           REST API for any Postgres database
description:        Reads the schema of a PostgreSQL database and creates RESTful routes
                    for the tables and views, supporting all HTTP verbs that security
                    permits.
license:            MIT
license-file:       LICENSE
author:             Joe Nelson, Adam Baker, Steve Chavez
maintainer:         Steve Chavez <stevechavezast@gmail.com>
category:           Executable, PostgreSQL, Network APIs
homepage:           https://postgrest.org
bug-reports:        https://github.com/PostgREST/postgrest/issues
build-type:         Simple
extra-source-files: CHANGELOG.md
cabal-version:      >= 1.10

source-repository head
  type:     git
  location: git://github.com/PostgREST/postgrest.git

flag dev
  default:     False
  manual:      True
  description: Development flags

flag hpc
  default:     True
  manual:      True
  description: Enable HPC (dev only)

library
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                      QuasiQuotes
                      NoImplicitPrelude
  hs-source-dirs:     src
  exposed-modules:    PostgREST.ApiRequest
                      PostgREST.App
                      PostgREST.Auth
                      PostgREST.Config
                      PostgREST.DbRequestBuilder
                      PostgREST.DbStructure
                      PostgREST.Error
                      PostgREST.Middleware
                      PostgREST.OpenAPI
                      PostgREST.Parsers
                      PostgREST.QueryBuilder
                      PostgREST.Statements
                      PostgREST.RangeQuery
                      PostgREST.Types
  other-modules:      Paths_postgrest
                      PostgREST.Private.Common
                      PostgREST.Private.ProxyUri
                      PostgREST.Private.QueryFragment
  build-depends:      base                      >= 4.9 && < 4.15
                    , HTTP                      >= 4000.3.7 && < 4000.4
                    , Ranged-sets               >= 0.3 && < 0.5
                    , aeson                     >= 1.4.7 && < 1.6
                    , ansi-wl-pprint            >= 0.6.7 && < 0.7
                    , base64-bytestring         >= 1 && < 1.3
                    , bytestring                >= 0.10.8 && < 0.11
                    , case-insensitive          >= 1.2 && < 1.3
                    , cassava                   >= 0.4.5 && < 0.6
                    , configurator-pg           >= 0.2 && < 0.3
                    , containers                >= 0.5.7 && < 0.7
                    , contravariant             >= 1.4 && < 1.6
                    , contravariant-extras      >= 0.3.3 && < 0.4
                    , cookie                    >= 0.4.2 && < 0.5
                    , either                    >= 4.4.1 && < 5.1
                    , fast-logger               >= 2.4.5
                    , gitrev                    >= 1.2 && < 1.4
                    , hasql                     >= 1.4 && < 1.5
                    , hasql-dynamic-statements  == 0.3.1
                    , hasql-pool                >= 0.5 && < 0.6
                    , hasql-transaction         >= 0.7.2 && < 1.1
                    , heredoc                   >= 0.2 && < 0.3
                    , http-types                >= 0.12.2 && < 0.13
                    , insert-ordered-containers >= 0.2.2 && < 0.3
                    , interpolatedstring-perl6  >= 1 && < 1.1
                    , jose                      >= 0.8.1 && < 0.9
                    , lens                      >= 4.14 && < 4.20
                    , lens-aeson                >= 1.0.1 && < 1.2
                    , mtl                       >= 2.2.2 && < 2.3
                    , network-uri               >= 2.6.1 && < 2.8
                    , optparse-applicative      >= 0.13 && < 0.17
                    , parsec                    >= 3.1.11 && < 3.2
                    , protolude                 >= 0.3 && < 0.4
                    , regex-tdfa                >= 1.2.2 && < 1.4
                    , scientific                >= 0.3.4 && < 0.4
                    , swagger2                  >= 2.4 && < 2.7
                    , text                      >= 1.2.2 && < 1.3
                    , time                      >= 1.6 && < 1.11
                    , unordered-containers      >= 0.2.8 && < 0.3
                    , vector                    >= 0.11 && < 0.13
                    , wai                       >= 3.2.1 && < 3.3
                    , wai-cors                  >= 0.2.5 && < 0.3
                    , wai-extra                 >= 3.0.19 && < 3.2
                    , wai-logger                >= 2.3.2
                    , wai-middleware-static     >= 0.8.1 && < 0.10
                      -- -fno-spec-constr may help keep compile time memory use in check,
                      --   see https://gitlab.haskell.org/ghc/ghc/issues/16017#note_219304
                      -- -optP-Wno-nonportable-include-path
                      --   prevents build failures on case-insensitive filesystems (macos),
                      --   see https://github.com/commercialhaskell/stack/issues/3918
  ghc-options:        -Werror -Wall -fwarn-identities
                      -fno-spec-constr -optP-Wno-nonportable-include-path

  if flag(dev)
    ghc-options: -O0
    if flag(hpc)
      ghc-options: -fhpc -hpcdir .hpc
  else
    ghc-options: -O2

executable postgrest
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                      QuasiQuotes
                      NoImplicitPrelude
  hs-source-dirs:     main
  main-is:            Main.hs
  build-depends:      base                >= 4.9 && < 4.15
                    , aeson               >= 1.4.7 && < 1.6
                    , auto-update         >= 0.1.4 && < 0.2
                    , base64-bytestring   >= 1 && < 1.3
                    , bytestring          >= 0.10.8 && < 0.11
                    , directory           >= 1.2.6 && < 1.4
                    , either              >= 4.4.1 && < 5.1
                    , hasql               >= 1.4 && < 1.5
                    , hasql-pool          >= 0.5 && < 0.6
                    , hasql-transaction   >= 0.7.2 && < 1.1
                    , hasql-notifications >= 0.1 && < 0.2
                    , network             >= 2.6 && < 3.2
                    , postgrest
                    , protolude           >= 0.3 && < 0.4
                    , retry               >= 0.7.4 && < 0.9
                    , text                >= 1.2.2 && < 1.3
                    , time                >= 1.6 && < 1.11
                    , wai                 >= 3.2.1 && < 3.3
                    , warp                >= 3.2.12 && < 3.4
  ghc-options:        -threaded -rtsopts "-with-rtsopts=-N -I2"
                      -O2 -Werror -Wall -fwarn-identities
                      -fno-spec-constr -optP-Wno-nonportable-include-path

  if flag(dev)
    ghc-options: -O0
    if flag(hpc)
      ghc-options: -fhpc -hpcdir .hpc
  else
    ghc-options: -O2

  if !os(windows)
    build-depends: unix
    other-modules: UnixSocket

test-suite spec
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                      QuasiQuotes
                      NoImplicitPrelude
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Feature.AndOrParamsSpec
                      Feature.AsymmetricJwtSpec
                      Feature.AudienceJwtSecretSpec
                      Feature.AuthSpec
                      Feature.BinaryJwtSecretSpec
                      Feature.ConcurrentSpec
                      Feature.CorsSpec
                      Feature.DeleteSpec
                      Feature.EmbedDisambiguationSpec
                      Feature.ExtraSearchPathSpec
                      Feature.HtmlRawOutputSpec
                      Feature.InsertSpec
                      Feature.JsonOperatorSpec
                      Feature.MultipleSchemaSpec
                      Feature.NoJwtSpec
                      Feature.NonexistentSchemaSpec
                      Feature.OpenApiSpec
                      Feature.OptionsSpec
                      Feature.ProxySpec
                      Feature.QueryLimitedSpec
                      Feature.QuerySpec
                      Feature.RangeSpec
                      Feature.RawOutputTypesSpec
                      Feature.RollbackSpec
                      Feature.RootSpec
                      Feature.RpcPreRequestGucsSpec
                      Feature.RpcSpec
                      Feature.SingularSpec
                      Feature.UnicodeSpec
                      Feature.UpdateSpec
                      Feature.UpsertSpec
                      SpecHelper
                      TestTypes
  build-depends:      base              >= 4.9 && < 4.15
                    , aeson             >= 1.4.7 && < 1.6
                    , aeson-qq          >= 0.8.1 && < 0.9
                    , async             >= 2.1.1 && < 2.3
                    , auto-update       >= 0.1.4 && < 0.2
                    , base64-bytestring >= 1 && < 1.3
                    , bytestring        >= 0.10.8 && < 0.11
                    , case-insensitive  >= 1.2 && < 1.3
                    , cassava           >= 0.4.5 && < 0.6
                    , containers        >= 0.5.7 && < 0.7
                    , contravariant     >= 1.4 && < 1.6
                    , hasql             >= 1.4 && < 1.5
                    , hasql-pool        >= 0.5 && < 0.6
                    , hasql-transaction >= 0.7.2 && < 1.1
                    , heredoc           >= 0.2 && < 0.3
                    , hspec             >= 2.3 && < 2.8
                    , hspec-wai         >= 0.10 && < 0.12
                    , hspec-wai-json    >= 0.10 && < 0.12
                    , http-types        >= 0.12.3 && < 0.13
                    , lens              >= 4.14 && < 4.20
                    , lens-aeson        >= 1.0.1 && < 1.2
                    , monad-control     >= 1.0.1 && < 1.1
                    , postgrest
                    , process           >= 1.4.2 && < 1.7
                    , protolude         >= 0.3 && < 0.4
                    , regex-tdfa        >= 1.2.2 && < 1.4
                    , text              >= 1.2.2 && < 1.3
                    , time              >= 1.6 && < 1.11
                    , transformers-base >= 0.4.4 && < 0.5
                    , wai               >= 3.2.1 && < 3.3
                    , wai-extra         >= 3.0.19 && < 3.2
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
                      -O0 -Werror -Wall -fwarn-identities
                      -fno-spec-constr -optP-Wno-nonportable-include-path
                      -fno-warn-missing-signatures

test-suite spec-querycost
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       QuasiQuotes
                       NoImplicitPrelude
  hs-source-dirs:      test
  main-is:             QueryCost.hs
  other-modules:       SpecHelper
  build-depends:       base              >= 4.9 && < 4.15
                     , aeson             >= 1.4.7 && < 1.6
                     , aeson-qq          >= 0.8.1 && < 0.9
                     , async             >= 2.1.1 && < 2.3
                     , auto-update       >= 0.1.4 && < 0.2
                     , base64-bytestring >= 1 && < 1.3
                     , bytestring        >= 0.10.8 && < 0.11
                     , case-insensitive  >= 1.2 && < 1.3
                     , cassava           >= 0.4.5 && < 0.6
                     , containers        >= 0.5.7 && < 0.7
                     , contravariant     >= 1.4 && < 1.6
                     , hasql             >= 1.4 && < 1.5
                     , hasql-dynamic-statements  == 0.3.1
                     , hasql-pool        >= 0.5 && < 0.6
                     , hasql-transaction >= 0.7.2 && < 1.1
                     , heredoc           >= 0.2 && < 0.3
                     , hspec             >= 2.3 && < 2.8
                     , hspec-wai         >= 0.10 && < 0.12
                     , hspec-wai-json    >= 0.10 && < 0.12
                     , http-types        >= 0.12.3 && < 0.13
                     , lens              >= 4.14 && < 4.20
                     , lens-aeson        >= 1.0.1 && < 1.2
                     , monad-control     >= 1.0.1 && < 1.1
                     , postgrest
                     , process           >= 1.4.2 && < 1.7
                     , protolude         >= 0.3 && < 0.4
                     , regex-tdfa        >= 1.2.2 && < 1.4
                     , text              >= 1.2.2 && < 1.3
                     , time              >= 1.6 && < 1.11
                     , transformers-base >= 0.4.4 && < 0.5
                     , wai               >= 3.2.1 && < 3.3
                     , wai-extra         >= 3.0.19 && < 3.2
  ghc-options:         -O0 -Werror -Wall -fwarn-identities
                       -fno-spec-constr -optP-Wno-nonportable-include-path
